fixed overflow scrolling error

--- a/src/main/resources/static/css/Home.css
+++ b/src/main/resources/static/css/Home.css
@@ -19,7 +19,7 @@
 
 * { box-sizing: border-box; margin: 0; padding: 0; }
 html, body {
-  height: 100%;
+  height: 100vh;
   overflow-y: auto;
 }
 
